--- a/public/index.html
+++ b/public/index.html
@@ -793,7 +793,6 @@
 
                         // إنشاء كائن jsPDF
                         const { jsPDF } = window.jspdf;
-                        if (!jsPDF) throw new Error('مكتبة jsPDF غير متوفرة');
                         const doc = new jsPDF({
                             orientation: 'portrait',
                             unit: 'mm',
@@ -813,11 +812,6 @@
 
                         // دالة لإنشاء قسم كـ HTML كنصوص مرتبة
                         const createSectionElement = (title, contentItems, isSubsection = false) => {
-                            if (!contentItems || !Array.isArray(contentItems)) {
-                                console.warn(`تحذير: محتوى القسم "${title}" غير صالح`);
-                                return null;
-                            }
-
                             const section = document.createElement('div');
                             section.style.fontFamily = 'Amiri, Arial, sans-serif';
                             section.style.direction = 'rtl';
@@ -834,6 +828,7 @@
                             section.style.overflow = 'visible';
                             section.style.display = 'block';
                             section.style.visibility = 'visible';
+                            section.style.minHeight = '800px'; // زيادة الارتفاع لتجنب القص
 
                             if (!isSubsection) {
                                 const header = document.createElement('div');
@@ -844,8 +839,8 @@
                                 header.style.borderBottom = '1px solid #C19A6B';
                                 header.innerHTML = `
                                     <h1 style="font-size: 18px; margin: 3px 0;">${sanitizeText(title)}</h1>
-                                    <p style="font-size: 13px; margin: 3px 0;">إعداد: ${sanitizeText(pdfData?.companyInfo?.name) || 'غير متوفر'}</p>
-                                    <p style="font-size: 12px; margin: 2px 0;">التاريخ: ${new Date().toLocaleDateString('ar-IQ')}</p>
+                                    <p style="font-size: 13px; margin: 3px 0;">إعداد: ${sanitizeText(pdfData.companyInfo?.name) || 'غير متوفر'}</p>
+                                    <p style="font-size: 13px; margin: 3px 0;">التاريخ: ${new Date().toLocaleDateString('ar-IQ')}</p>
                                 `;
                                 section.appendChild(header);
                             } else {
@@ -873,7 +868,6 @@
                                 p.style.background = '#FFF';
                                 p.style.borderRadius = '3px';
                                 p.style.border = '1px solid #DBC2A4';
-                                p.style.fontSize = '14px';
                                 p.textContent = sanitizeText(item);
                                 content.appendChild(p);
                             });
@@ -885,45 +879,38 @@
 
                         // دالة لإضافة قسم إلى PDF
                         const addSectionToPDF = async (sectionElement, sectionName) => {
-                            if (!sectionElement) {
-                                console.warn(`تحذير: عنصر قسم "${sectionName}" غير موجود`);
-                                return;
-                            }
-
                             console.log(`بدء إضافة قسم "${sanitizeText(sectionName)}"`);
                             document.body.appendChild(sectionElement);
 
                             // إضافة تأخير لضمان اكتمال تحميل العناصر
-                            await new Promise(resolve => setTimeout(resolve, 300));
+                            await new Promise(resolve => setTimeout(resolve, 600));
 
                             const canvas = await html2canvas(sectionElement, {
                                 scale: 2,
                                 useCORS: true,
                                 logging: true,
-                                width: 754,
-                                height: sectionElement.scrollHeight + 50,
+                                windowWidth: 794,
+                                windowHeight: sectionElement.scrollHeight + 800, // هامش إضافي
                                 scrollX: 0,
                                 scrollY: 0,
                                 backgroundColor: '#FFF'
                             });
+                            const imgData = canvas.toDataURL('image/jpeg', 0.95);
+                            const imgWidth = 190; // عرض الصورة في الـ PDF
+                            const imgHeight = (canvas.height * imgWidth) / canvas.width; // ارتفاع الصورة
+                            const pageHeight = 277 - 30; // ارتفاع الصفحة مطروحًا هامش 30 مم
+                            let position = 0; // الإزاحة في الصورة
 
-                            const imgData = canvas.toDataURL('image/png', 1.0);
-                            const imgWidth = 190;
-                            const imgHeight = (canvas.height * imgWidth) / canvas.width;
-                            const pageHeight = 277 - 30;
-                            let position = 0;
+                            console.log(`قسم "${sanitizeText(sectionName)}": ارتفاع الصورة ${imgHeight.toFixed(2)} مم, عدد الصفحات المتوقع ${Math.ceil(imgHeight / pageHeight)}`);
 
-                            console.log(`قسم "${sanitizeText(sectionName)}": عرض الصورة=${canvas.width}px, ارتفاع الصورة=${imgHeight.toFixed(2)} مم, عدد الصفحات المتوقع=${Math.ceil(imgHeight / pageHeight)}`);
-
-                            // إضافة صفحة جديدة للقسم
+                            // إضافة صفحة جديدة لكل قسم
                             doc.addPage();
 
                             // تقسيم الصورة عبر الصفحات
                             while (position < imgHeight) {
                                 const remainingHeight = Math.min(pageHeight, imgHeight - position);
-                                const offsetY = (position * canvas.height) / imgHeight;
-                                console.log(`-- صفحة قسم "${sanitizeText(sectionName)}": إزاحة=${position.toFixed(2)} مم, offsetY=${offsetY.toFixed(2)} px, ارتفاع=${remainingHeight.toFixed(2)} مم`);
-                                doc.addImage(imgData, 'PNG', 10, 10, imgWidth, remainingHeight, undefined, 'NONE', 0, offsetY, canvas.width, canvas.height);
+                                console.log(`إضافة صورة لقسم "${sectionName}": إزاحة=${position.toFixed(2)} مم, ارتفاع=${remainingHeight.toFixed(2)} مم`);
+                                doc.addImage(imgData, 'JPEG', 10, 10, imgWidth, remainingHeight, undefined, 'FAST');
                                 position += remainingHeight;
                                 if (position < imgHeight) {
                                     doc.addPage();
@@ -931,11 +918,6 @@
                             }
                             document.body.removeChild(sectionElement);
                         };
-
-                        // التحقق من pdfData
-                        if (!pdfData || typeof pdfData !== 'object') {
-                            throw new Error('بيانات pdfData غير صالحة');
-                        }
 
                         // 1. معلومات الشركة
                         const companyItems = [
@@ -967,7 +949,7 @@
                         const quantitiesItems = [];
                         pdfData.quantities?.sections?.forEach(section => {
                             quantitiesItems.push(`--- ${sanitizeText(section.subtitle)} ---`);
-                            section.items?.forEach(item => {
+                            section.items.forEach(item => {
                                 quantitiesItems.push(`${sanitizeText(item.name)}: ${sanitizeText(item.value)} ${sanitizeText(item.unit || '')}`);
                             });
                         });
@@ -977,7 +959,7 @@
                         const engineeringItems = [];
                         pdfData.engineering?.sections?.forEach(section => {
                             engineeringItems.push(`--- ${sanitizeText(section.subtitle)} ---`);
-                            section.items?.forEach(item => {
+                            section.items.forEach(item => {
                                 engineeringItems.push(`${sanitizeText(item.name)}: ${sanitizeText(item.value)} ${sanitizeText(item.unit || '')}`);
                             });
                         });
@@ -1028,30 +1010,25 @@
                                 scrollX: 0,
                                 scrollY: 0
                             });
-                            const footerImgData = canvas.toDataURL('image/png', 1.0);
+                            const footerImgData = footerCanvas.toDataURL('image/jpeg', 0.95);
                             doc.setPage(i);
-                            doc.addImage(footerImgData, 'PNG', 10, 287 - 5, 190, (footerCanvas.height * 190) / footerCanvas.width);
+                            doc.addImage(footerImgData, 'JPEG', 10, 287 - 5, 190, (footerCanvas.height * 190) / footerCanvas.width);
                             document.body.removeChild(footerElement);
                         }
 
                         // حفظ الملف
-                        doc.save(`تقرير_تكاليف_البنية_${new Date().toISOString().split('T')[0]}.pdf`);
-                        console.log(`تم إنشاء PDF بـ ${finalPageCount} صفحات`);
-                        
+                        doc.save(`تقرير_تكاليف_البناء_${new Date().toISOString().split('T')[0]}.pdf`);
+                        console.log(`تم إنشاء ملف PDF بـ ${finalPageCount} صفحات`);
                     } catch (error) {
                         console.error('خطأ أثناء إنشاء PDF:', error.stack);
-                        const resultContent = document.getElement('div');
-                        resultContent.id = 'resultContent';
-                        resultContent.innerHTML = `<p style="color: #FF6347;">خطأ في إنشاء PDF: ${error.message}.</p>`;
-                        const resultContainer = document.createElement('div');
-                        resultContainer.id = 'resultContainer';
+                        const resultContent = document.getElementById('resultContent') || document.createElement('div');
+                        resultContent.innerHTML = `<p style="color: #C75656;">خطأ في إنشاء PDF: ${error.message}.</p>`;
+                        const resultContainer = document.getElementById('resultContainer') || document.createElement('div');
                         resultContainer.classList.remove('hidden');
                         resultContainer.style.display = 'block';
-                        document.body.appendChild(resultContainer);
-                        resultContainer.appendChild(resultContent);
+                        if (!document.getElementById('resultContainer')) document.body.appendChild(resultContainer);
                     }
-                }, { once: true 
-                });
+                }, { once: true });
             } catch (error) {
                 console.error('خطأ أثناء معالجة النموذج:', error);
                 resultContent.innerHTML = `<p style="color: #C75656;">خطأ: ${error.message || 'حدث خطأ غير متوقع'}</p>`;
